objects/CMN_CommunicationLogForm__c.object
<CustomObject>
    <description>Custom Object used to track the forms communication log and attachments</description>
    <fields>
        <fullName>CMN_CommunicationAttachmentDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the attachment associated with Communication Log Form</description>
        <label>Form</label>
        <referenceTo>CMN_CommunicationAttachmentDefinition__c</referenceTo>
        <relationshipLabel>Communication Log Forms</relationshipLabel>
        <relationshipName>Communication_Log_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMN_CommunicationLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the Communication Log associated with Communication Log Form</description>
        <label>Log</label>
        <referenceTo>CMN_CommunicationLog__c</referenceTo>
        <relationshipLabel>Communication Log Forms</relationshipLabel>
        <relationshipName>Communication_Log_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMN_Reason__c</fullName>
        <description>Represents the reason for logging the Form</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Communication Log Form</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Log Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>